# vector-index-mcp

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  content_extractor.py  file_watcher.py  indexer.py  main.py  mcp_server.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: publish-to-pypi.yml
.roo/: mcp.json
index_mcp/: __init__.py  cli.py  main.py  models.py
routers/: index.py  search.py  status.py
tests/: __init__.py  conftest.py  test_api.py  test_mcp_initialization.py  test_mcp_stdio_interface.py  test_mcp_tool_calls.py
vector_index_mcp/: __init__.py  cli.py  config.py  dependencies.py  file_watcher.py  indexer.py  main.py  main_mcp.py  mcp_server.py  models.py
vector_index_mcp/routers/: index.py  search.py  status.py
